[project]
name = "alamo-drafthouse-feeds"
description = "JSON feeds for Alamo Drafthouse showings"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.1,<9.0",
    "lru-cache @ https://github.com/josh/py-lru-cache/releases/download/v1.0.0/lru_cache-1.0.0-py3-none-any.whl",
    "requests>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.3.0",
    "types-requests>=2.0.0,<3.0",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
