[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alamo-drafthouse-feeds"
version = "0.1.0"
description = "JSON feeds for Alamo Drafthouse showings"
readme = "README.md"
authors = [{name = "Joshua Peek"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.1,<9.0",
    "lru-cache @ https://github.com/josh/lru-cache-python/releases/download/v1.0.1/lru_cache-1.0.1-py3-none-any.whl",
    "requests>=2.0.0,<3.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.3.0",
    "types-requests>=2.0.0,<3.0",
]

[project.scripts]
drafthouse = "drafthouse:main"

[tool.hatch.build.targets.wheel.force-include]
"drafthouse.py" = "drafthouse/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
